fix: fix layout issues with the footer

--- a/src/view/shared/layouts/minimalLayout.css
+++ b/src/view/shared/layouts/minimalLayout.css
@@ -23,6 +23,11 @@
   text-align: center;
 }
 
+.minimal-layout-push {
+  height: 100%;
+  flex: 1;
+}
+
 @media screen and (max-width: 768px) {
   .minimal-layout-header {
     height: 130px;
